pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidOutput2.pkl
class Test {}

output: Test = new {}
